--- a/TodoList/src/styles/output.css
+++ b/TodoList/src/styles/output.css
@@ -1873,6 +1873,10 @@ video {
   position: relative;
 }
 
+.bottom-7 {
+  bottom: 1.75rem;
+}
+
 .right-1 {
   right: 0.25rem;
 }
@@ -1889,8 +1893,24 @@ video {
   top: 4rem;
 }
 
-.top-5 {
-  top: 1.25rem;
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-16 {
+  bottom: 4rem;
 }
 
 .m-1 {
@@ -2077,6 +2097,42 @@ video {
 
 .bg-success {
   background-color: var(--color-success);
+}
+
+.bg-gray-800\/10 {
+  background-color: rgb(31 41 55 / 0.1);
+}
+
+.bg-gray-700\/10 {
+  background-color: rgb(55 65 81 / 0.1);
+}
+
+.bg-gray-300\/30 {
+  background-color: rgb(209 213 219 / 0.3);
+}
+
+.bg-gray-300\/0 {
+  background-color: rgb(209 213 219 / 0);
+}
+
+.bg-gray-300\/70 {
+  background-color: rgb(209 213 219 / 0.7);
+}
+
+.bg-gray-600\/10 {
+  background-color: rgb(75 85 99 / 0.1);
+}
+
+.bg-gray-500\/10 {
+  background-color: rgb(107 114 128 / 0.1);
+}
+
+.bg-gray-500\/30 {
+  background-color: rgb(107 114 128 / 0.3);
+}
+
+.bg-gray-600\/30 {
+  background-color: rgb(75 85 99 / 0.3);
 }
 
 .bg-gradient-to-r {
