--- a/TodoList/src/styles/output.css
+++ b/TodoList/src/styles/output.css
@@ -1110,6 +1110,78 @@ video {
   display: none;
 }
 
+.textarea {
+  border: var(--border) solid #0000;
+  min-height: calc(0.25rem * 20);
+  flex-shrink: 1;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: var(--radius-field);
+  background-color: var(--color-base-100);
+  padding-block: calc(0.25rem * 2);
+  vertical-align: middle;
+  width: clamp(3rem, 20rem, 100%);
+  padding-inline-start: 0.75rem;
+  padding-inline-end: 0.75rem;
+  font-size: 0.875rem;
+  touch-action: manipulation;
+  border-color: var(--input-color);
+  box-shadow: 0 1px color-mix(in oklab, var(--input-color) calc(var(--depth) * 10%), #0000) inset, 0 -1px oklch(100% 0 0 / calc(var(--depth) * 0.1)) inset;
+  --input-color: color-mix(in oklab, var(--color-base-content) 20%, #0000);
+}
+
+.textarea textarea {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: none;
+}
+
+.textarea textarea:focus, .textarea textarea:focus-within {
+  --tw-outline-style: none;
+  outline-style: none;
+}
+
+@media (forced-colors: active) {
+  .textarea textarea:focus, .textarea textarea:focus-within {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+  }
+}
+
+.textarea:focus, .textarea:focus-within {
+  --input-color: var(--color-base-content);
+  box-shadow: 0 1px color-mix(in oklab, var(--input-color) calc(var(--depth) * 10%), #0000);
+  outline: 2px solid var(--input-color);
+  outline-offset: 2px;
+  isolation: isolate;
+}
+
+.textarea:has(> textarea[disabled]), .textarea:is(:disabled, [disabled]) {
+  cursor: not-allowed;
+  border-color: var(--color-base-200);
+  background-color: var(--color-base-200);
+  color: color-mix(in oklab, var(--color-base-content) 40%, transparent);
+}
+
+.textarea:has(> textarea[disabled])::-moz-placeholder, .textarea:is(:disabled, [disabled])::-moz-placeholder {
+  color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+}
+
+.textarea:has(> textarea[disabled])::placeholder, .textarea:is(:disabled, [disabled])::placeholder {
+  color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+}
+
+.textarea:has(> textarea[disabled]), .textarea:is(:disabled, [disabled]) {
+  box-shadow: none;
+}
+
+.textarea:has(> textarea[disabled]) > textarea[disabled] {
+  cursor: not-allowed;
+}
+
 .mockup-browser .mockup-browser-toolbar .input {
   margin-inline: auto;
   display: flex;
@@ -1873,8 +1945,12 @@ video {
   position: relative;
 }
 
-.bottom-7 {
-  bottom: 1.75rem;
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .right-1 {
@@ -1887,30 +1963,6 @@ video {
 
 .top-1 {
   top: 0.25rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-16 {
-  bottom: 4rem;
 }
 
 .m-1 {
@@ -1939,6 +1991,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -1949,6 +2005,18 @@ video {
 
 .h-3 {
   height: 0.75rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .w-32 {
@@ -1965,6 +2033,11 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-min {
+  width: -moz-min-content;
+  width: min-content;
 }
 
 .flex-1 {
@@ -2081,6 +2154,10 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
 
+.bg-gray-600\/30 {
+  background-color: rgb(75 85 99 / 0.3);
+}
+
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
@@ -2099,42 +2176,6 @@ video {
   background-color: var(--color-success);
 }
 
-.bg-gray-800\/10 {
-  background-color: rgb(31 41 55 / 0.1);
-}
-
-.bg-gray-700\/10 {
-  background-color: rgb(55 65 81 / 0.1);
-}
-
-.bg-gray-300\/30 {
-  background-color: rgb(209 213 219 / 0.3);
-}
-
-.bg-gray-300\/0 {
-  background-color: rgb(209 213 219 / 0);
-}
-
-.bg-gray-300\/70 {
-  background-color: rgb(209 213 219 / 0.7);
-}
-
-.bg-gray-600\/10 {
-  background-color: rgb(75 85 99 / 0.1);
-}
-
-.bg-gray-500\/10 {
-  background-color: rgb(107 114 128 / 0.1);
-}
-
-.bg-gray-500\/30 {
-  background-color: rgb(107 114 128 / 0.3);
-}
-
-.bg-gray-600\/30 {
-  background-color: rgb(75 85 99 / 0.3);
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -2151,6 +2192,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-4 {
@@ -2183,10 +2228,6 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .pt-2 {
